--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
         })
     </script>
     <!-- <input id="nav_toggle" type="checkbox"> -->
-    <div class="hero">
-        <nav>
-            <h2>logo</h2>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#timeline">Timeline</a></li>
-                <li><a href="#">Outsoure</a></li>
-                <li><a href="#">Outreach</a></li>
-            </ul>
+    <div class="hero23">
+        <nav class="hero">
+           <div class="brandl">logo</div>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#about">Home</a></li>
+                    <li><a href="#timeline">Timeline</a></li>
+                    <li><a href="#">Outsoure</a></li>
+                    <li><a href="#">Outreach</a></li>
+                </ul>
+            </div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -38,17 +39,13 @@
     </div>
     <div class="scroll"></div>
     <div class="container"> 
-        <section>
+        <section id="home">
             <center><img src="hpi2.jpg" alt="" data-aos="zoom-in" data-aos-duration="3000" >
                <h3 >WHERE SCIENCE UNVEILS</h3></center>
         </section>
         <section id="about">
-            <center><img src="page2.jpg" alt=""><h1>ABOUT<p>Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Distinctio perferendis
-                laboriosam 
-                cum neque ipsa numquam nulla velit
-                 a culpa? Sequi similique vitae numquam eius
-                 ff quam facere cumque saepe fugit incidunt.</p>
+            <center><img src="page2.jpg" alt=""><h1>About<p>
+            "The biggest Annual Science Event in Central India <b> SINGULARITY 2022</b> is back with a bang! <br> Get ready for three days of exhilarating,jubilant and euphoric <br> experiencesof your lifetime! "</p>
                 </h1>
             </center>
             
@@ -61,58 +58,158 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">2015</div>
                     <div class="timeline-content">
-                        <h3>timeline item title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <h3>Clarion: A DebSoc Special</h3>
+                        <p><b>"Defend your beliefs and the last man(/woman) standing wins!"</b>br<a href=""><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">2016</div>
                     <div class="timeline-content">
-                        <h3>timeline item title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <h3>Looking Glass</h3>
+                        <p><b>“It is the brain, the little grey cells, on which one must rely. One must seek the truth within - not without.” </b><br><a href="https://forms.gle/WYLxJtfE91mmsumu8"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">2017</div>
                     <div class="timeline-content">
-                        <h3>timeline item title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <h3>Petridish Picasso</h3>
+                        <p><b>Making designs on agar plates using bacterial strains</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfPc9cfU_mSvbmok3uR9fHRWNoxBw1nn9a96jG_217SwCYGzQ/viewform?usp=sharing4"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">2018</div>
                     <div class="timeline-content">
-                        <h3>timeline item title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <h3>What's wrong with the scene</h3>
+                        <p><b></b><a href="https://docs.google.com/forms/d/1NZ5EDyNMHN48vr5KQwKmTnpxBzQ9AOTH9WTYlxkN4iY/edit"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">2019</div>
                     <div class="timeline-content">
-                        <h3>timeline item title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <h3>Treasure Hunt</h3>
+                        <p><b>“If it comes to a swinging, swing all, say I.” </b><br><a href="https://forms.gle/FzCjk2cPxM3dbQQy5"><button>Register</button></a> </p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">2020</div>
                     <div class="timeline-content">
-                        <h3>timeline item title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <h3>Curve Ball</h3>
+                        <p><b>'Want to reveal that mind boggling idea that you just had?this is the right place to be.'</b><br><a href="https://forms.gle/ET23E5yUEhP3kivi7"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">2021</div>
                     <div class="timeline-content">
-                        <h3>timeline item title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <h3>Number’s Game</h3>
+                        <p><b>"Mind bending numbers, higher dimensions, googolisms, hyperoperations and the THE BIG NUMBER CHALLENGE are awaiting you!"</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfKRhg2LDKDVIkxsaf69bcubaSSBG3J5ZH2TQqb37PO-mQtkw/viewform?usp=sharing"><button>Register</button></a></p>
                     </div>
                 </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>What’s Wrong with the Scene</h3>
+                        <p><b>Write down the biggest scientific plot holes in a movie ,
+                            And explain what would happen in real life!
+                            </b><br><a href=""><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Concept in 3 Levels</h3>
+                        <p><b>“If you can’t explain it in simple terms, you don’t understand it.”</b><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlomNKnndO8gNqibGgp7oHYJex1LVCFVFm3k6pL-lwKTrukA/viewform?usp=sf_link"><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Bad Ad Hoc Hypothesis</h3>
+                        <p><b>"In a mad world, only the insane are sane.Being wrong has never felt so right."</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSeOjzpF0O5PHyevK2zjZ0izZBeBmJG16gf2y8tHA3-wvUazyQ/viewform"><button>Register</button></a>
+                          </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Hunting the Heavens</h3>
+                        <p><b>"A TREASURE HUNT FOR ALL THE ASTROPHILES OUT THERE!"</b><br><a href=""><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Renaissance</h3>
+                        <p><b>"Rack up your brains and get ready to feel science like never before!"</b><br><a href=""><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Domino Effect</h3>
+                        <p><b>"Construct a crazily complex Rube Goldberg machine to perform utterly simple tasks"</b><br><a href="https://forms.gle/nhZgGVef7CeonzKN7"><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Stock Market Simulation</h3>
+                        <p> <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</b><br><a href=""><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Pixel Por</h3>
+                        <p><b>"Pour in those pixels & buckle up that science wizard in you!"</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQYTfqEV6s7_8-B4jp83ADrU2725WilQjHDFyHRx--iQ749g/viewform?usp=sf_link"><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Pictionary</h3>
+                        <p><b>"Sketch it Quick! Guess it Back!"</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSdyTkdvW5myEuFFLmR4osD6k-w1Enfx6lZ2S1xQFxBdJPWgyw/viewform?usp=sf_link"><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Memince</h3>
+                        <p><b>"This is beyond science"</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7fKiX_1fd1WIZK5neyK510ttTqwBMdg6JQ89Qs7T8cIfbIg/viewform?usp=sharing"><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Alacrity</h3>
+                        <p><b>"Pick your favourite trending song and create a short Instagram reel with a scientific twist"</b><br><a href="https://forms.gle/uKKNCYVhnPpZpBSq7"><button>Register</button></a></p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-content">
+                        <h3>Quirky Quills</h3>
+                        <p><b>"Pick your favourite trending song and create a short Instagram reel with a scientific twist"</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSeICnYQ7U6mxA4iOMSRTtgmefjzorc3oR5z7yY_Nml6d_m-yw/viewform?usp=sharing"><button>Register</button></a></p>
+                    </div>
+                </div>
+
             </div>
         </section>
     </div>
