--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="preloader"></div>
+    <div id="preloader"><img src="pl3.gif" alt=""></div>
     <script>
         var loader=document.getElementById("preloader");
         window.addEventListener("load",function(){
