--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Curve Ball</h3>
-                        <p><b>"Want to reveal that mind boggling idea that you just had? This is the right place to be." <br>9-11 am</b><br><a href="https://forms.gle/ET23E5yUEhP3kivi7"><button>Register</button></a></p>
+                        <p><b>"Want to reveal that mind boggling idea that you just had? This is the right place to be." <br>9-11 am<br>Venue:- L-3</b><br><a href="https://forms.gle/ET23E5yUEhP3kivi7"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -68,15 +68,15 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Stock Market Simulation</h3>
-                        <p> <b>"Evaluate your trading strategies before trying out in the real world" <br>10am-1pm, 15th, Oct <br>11am-1pm 16th, Oct <br>3-6pm 17th, Oct</b><br><a href=""><button>Register</button></a></p>
+                        <p> <b>"Evaluate your trading strategies before trying in the real world" <br>10am-1pm, 15th, Oct <br>11am-1pm 16th, Oct <br>3-6pm 17th, Oct<br>Venue:- L1</b><br><a href=""><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
-                        <h3>Hitchhiking</h3>
-                        <p> <b>"Everything around you is numbers, Everything around you is mathematics"<br>2-5pm</b><br><a href=""><button>Register</button></a></p>
+                        <h3>Hitch Hiking</h3>
+                        <p> <b>"Everything around you is numbers, Everything around you is mathematics"<br>2-5pm<br>Venue:- L-4</b><br><a href=""><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -84,7 +84,7 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Petridish Picasso</h3>
-                        <p><b>"Picasso in a lab coat" <br>2-5pm</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfPc9cfU_mSvbmok3uR9fHRWNoxBw1nn9a96jG_217SwCYGzQ/viewform?usp=sharing4"><button>Register</button></a></p>
+                        <p><b>"Picasso in a lab coat" <br>2-5pm<br>Venue:- UG Bio Lab</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfPc9cfU_mSvbmok3uR9fHRWNoxBw1nn9a96jG_217SwCYGzQ/viewform?usp=sharing4"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -92,7 +92,7 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Concept in 3 Levels</h3>
-                        <p><b>“Can you explain it simply?”<br>4-6 pm </b> <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlomNKnndO8gNqibGgp7oHYJex1LVCFVFm3k6pL-lwKTrukA/viewform?usp=sf_link"><button>Register</button></a></p>
+                        <p><b>“Can you explain it simply?”<br>4-6 pm <br>Venue:- L-7</b> <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlomNKnndO8gNqibGgp7oHYJex1LVCFVFm3k6pL-lwKTrukA/viewform?usp=sf_link"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -100,7 +100,7 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Laser Show</h3>
-                        <p><b>Venue:- L5 <br>6-6:30 pm </b> <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlomNKnndO8gNqibGgp7oHYJex1LVCFVFm3k6pL-lwKTrukA/viewform?usp=sf_link"><button>Register</button></a></p>
+                        <p><b>6-6:30 pm<br>Venue:- L5 </b> <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlomNKnndO8gNqibGgp7oHYJex1LVCFVFm3k6pL-lwKTrukA/viewform?usp=sf_link"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -108,7 +108,7 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Guest Talk by Mr. Tapan Misra </h3>
-                        <p><b>Venue:- L5 <br>6:30-8pm </b> <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlomNKnndO8gNqibGgp7oHYJex1LVCFVFm3k6pL-lwKTrukA/viewform?usp=sf_link"><button>Register</button></a></p>
+                        <p><b>6:30-8pm<br>Venue:- L5 </b> <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlomNKnndO8gNqibGgp7oHYJex1LVCFVFm3k6pL-lwKTrukA/viewform?usp=sf_link"><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
