--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Clarion: A DebSoc Special</h3>
-                        <p><b>"Logic supersedes Language!"<br>Pre-Qualifiears:8-12pm<br>Finals: 9-11am 16th, Oct</b> <br><a href=""><button>Register</button></a></p>
+                        <p><b>"Logic supersedes Language!"<br>Pre-Qualifiears:8-12pm<br>Finals: 9-11am 16th, Oct<br>Venue:- VH</b> <br><a href=""><button>Register</button></a></p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -124,7 +124,7 @@
                     <div class="timeline-date">15th, October</div>
                     <div class="timeline-content">
                         <h3>Hunting the Heavens</h3>
-                        <p><b>"Sharpen your minds, cause there is a cosmic enigma to confront!"<br>10pm-1am </b><br><a href=""><button>Register</button></a></p>
+                        <p><b>"Sharpen your minds, cause there is a cosmic enigma to confront!"<br>10pm-1am<br>Venue:- Athletics/L1 </b><br><a href=""><button>Register</button></a></p>
                     </div>
                 </div>
             
