--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="stylesheet" href="style.css" />
-   <title>Singularity</title>
+   <title>Document</title>
  </head>
  <body>
     <div id="preloader"></div>
@@ -35,7 +35,7 @@
             <a href="#home" target="_blank">home</a>
             <a href="#about" target="_blank">about</a>
             <a href="#timeline" target="_blank">timeline</a>
-            <a href="" target="_blank">outsource</a>
+            <a href="#" target="_blank">outsource</a>
             <a href="#" target="_blank">outreach</a>
         </div>
       </div>
