--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
                    <h3>   WHERE SCIENCE UNVEILS</h3></center>
             </section>
             <section id="about">
-                <center><img src="page2.jpg" alt=""><h1 style="font-size: 4rem;">About<p style="font-size: 1rem;">
-                "After two years of this covid era and online fests, The Greatest Annual Science Event in Central India,, <br><b> "SINGULARITY 2022"</b> is back with a bang! <br>So get ready for the three days full of exhilarating, jubilant and euphoric experiences of your lifetime! <br> Science prevails from 15th October to 17th October! "</p>
+                <center><img src="page2.jpg" alt=""><h1 style="font-size: 4rem;">About IISERB<p style="font-size: 1rem;">
+                The Indian Institute of Science Education and Research Bhopal, established in 2008, is one of the premium research institutes of the country. It has 200 acres of thriving green campus, 10 Departments, and 3 Centers of Excellence in Madhya Pradesh Capital.
+IISERs were established as premier institutes to impart education for research in fundamental sciences and cater to the nation's scientific advancements. Like Louis Pasteur once said, “Science knows no country because knowledge belongs to humanity and is the torch which illuminates the world.”</p>
                     </h1>
+                <h1 style="font-size: 4rem;">About IISERB<p style="font-size: 1rem;">Sprout seed needs water; we, youthful minds, want science with pleasure. As autumn comes in, we bring the carnival to transpire for all, the biggest science-to-boot more tech festival in central India, Singularity.</p></h1>
                 </center></section>
                 <section id="timeline">
                     <div class="timeline-items">
@@ -228,7 +230,7 @@
                                 <div class="timeline-date">17th, October</div>
                                 <div class="timeline-content">
                                     <h3>Speed Cubing</h3>
-                                    <p><b>"Construct a crazily complex Rube Goldberg machineto perform utterly simple tasks" <br>8-10 pm <br>Venue:-L11</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfrX-HkGUefpmpXhqD109vOU4wh_D574mYRHOaeY2XbXtlL4A/viewform"><button>Register</button></a></p>
+                                    <p><b>"Eat, sleep, speedcubing and repeat" <br>8-10 pm <br>Venue:-L11</b><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfrX-HkGUefpmpXhqD109vOU4wh_D574mYRHOaeY2XbXtlL4A/viewform"><button>Register</button></a></p>
                                 </div>
                             </div>
                             <div class="timeline-item">
